name:                jwt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/jwt#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
    JWT

  build-depends: base >= 4.7 && < 5
               , jose >= 0.4.0.2 && < 0.4.1.0
               , lens >= 4.13 && < 5.0
               , text >= 1.2.2.1 && < 1.2.3.0

  default-language:    Haskell2010

test-suite jwt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jwt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/jwt
